version/0.3/_sources/api/ansys/hps/data_transfer/client/models/storage/index.rst.txt






The ``storage.py`` module
=========================

.. py:module:: ansys.hps.data_transfer.client.models.storage


Summary
-------










.. py:currentmodule:: storage
.. tab-set::





    .. tab-item:: Enums

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:obj:`~PathType`
            - Create a collection of name/value pairs.






















Module detail
-------------








.. py:class:: PathType(*args, **kwds)



   
   Create a collection of name/value pairs.

   Example enumeration:

   >>> class Color(Enum):
   ...     RED = 1
   ...     BLUE = 2
   ...     GREEN = 3

   Access them by:

   - attribute access:

     >>> Color.RED
     <Color.RED: 1>

   - value lookup:

     >>> Color(1)
     <Color.RED: 1>

   - name lookup:

     >>> Color['RED']
     <Color.RED: 1>

   Enumerations can be iterated over, and know how many members they have:

   >>> len(Color)
   3

   >>> list(Color)
   [<Color.RED: 1>, <Color.BLUE: 2>, <Color.GREEN: 3>]

   Methods can be added to enumerations, and members can have their own
   attributes -- see the documentation for details.















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: PathType

Overview
--------

.. tab-set::





   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~FilePath`
            - 
          * - :py:attr:`~DirPath`
            - 
          * - :py:attr:`~AnyPath`
            - 






Import detail
-------------

.. code-block:: python

    from ansys.hps.data_transfer.client.models.storage import PathType


Attribute detail
----------------

.. py:attribute:: FilePath
   :value: 'file'


.. py:attribute:: DirPath
   :value: 'dir'


.. py:attribute:: AnyPath
   :value: 'any'









